loop-chaos/slim-version/yamls/pod-a2.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    selected: "true"
    id: a2
  name: a2
  namespace: loop-chaos
spec:
  containers:
  - command:
    - /agnhost
    - serve-hostname
    - --tcp
    - --http=false
    - --port
    - "80"
    image: k8s.gcr.io/e2e-test-images/agnhost:2.33
    imagePullPolicy: IfNotPresent
    name: cont-80-tcp
    ports:
    - containerPort: 80
      name: serve-80-tcp
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: s-a2
  namespace: loop-chaos
spec:
  ports:
  - name: service-port-tcp-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    id: a2
  type: ClusterIP
