loop-chaos/slim-version/yamls/allow-some-to-selected.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-client-a-via-pod-selector
  namespace: loop-chaos
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          allowFrom: "true"
  podSelector:
    matchLabels:
      selected: "true"
  policyTypes:
  - Ingress
